runFormatTest(import.meta, ["babel"], { bracketSpacing: false });
